# zap-coding-agent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  FEATURES.md  IMPLEMENTED_FEATURES.md  README.md  TUI_ENHANCEMENTS.md  ZAP.md  agent.toml.example  deny.toml  install.ps1  install.sh  tasks.md  wrangler.toml
.github/workflows/: build.yml  deploy-website.yml  security-audit.yml
.zap/: backlog.md  code.db  code.db-shm  code.db-wal  context.md  project.json  session_log.md  understanding.md
.zap/specs/: code-graph.md
content/evidence/: system-prompt-comparison.md
content/overview/: linkedin-reviews-final.txt  linkedin-reviews.md  linkedin.md  medium-skill-approach.md  medium.md
demos/: .gitignore  README.md
demos/code_indexing/: README.md  demo.tape  demo_full.tape  demo_tui.tape  demo_tui_full.tape  merge_voice.sh  run.sh  setup.sh
demos/context_viewer/: README.md  VOICEOVER.md  context_viewer.tape
demos/overview/: README.md  overview.tape  overview_tui.tape
docs/: SECURITY.md  backlog.md  ci-sdk.md  code-graph-decisions.md  code-index.md  commands.md  configuration.md  journeys.md  mcp.md  memory-session-comparison.md  opus-4.8-review-v2.md  opus-4.8-worldclass-plan.md  roadmap.md  security-review-v2.md  security-review-v3.md  security-review.md  security.md  skills.md  slm-support.md  system-prompt-comparison.md  why-zap.md
evals/: README.md
scripts/: check-features.sh  check-file-size.sh  deploy.sh  explore-db.sh  install-hooks.sh  pre-commit
src/: agent_core.rs  audit.rs  cli.rs  code_index.rs  config.rs  context_manager.rs  context_utils.rs  hooks.rs  http.rs  lib.rs  llm_client.rs  log.rs  main.rs  mcp.rs  permission_manager.rs  persistence.rs  plan_execution.rs  project.rs  remote.rs  remote_channel.rs  secret_scanner.rs  session.rs  shell_runner.rs  skill_manager.rs  snapshot.rs  stream_highlighter.rs  task_planner.rs  tool_registry.rs  trust.rs  ui.rs  workflow.rs
tests/: sdk_e2e.rs
website/: comparisons.html  docs.html  index.html  llms.txt  review.html  robots.txt  script.js  security.html  sitemap.xml  slm.html  style.css
(+216 files in other folders)
