[package]
name = "agent_harness"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
bytes = "1"
toml = { version = "0.8", features = ["parse"] }
dirs = "5"
colored = "2"
