[package]
name = "agent_harness"
version = "0.13.5"
edition = "2021"

[[bin]]
name = "zap"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
bytes = "1"
toml = { version = "0.8", features = ["parse"] }
dirs = "5"
colored = "2"
indicatif = "0.17"
similar = "2"
base64 = "0.22"
rustyline = { version = "14", features = ["derive"] }
inquire  = "0.7"
serde_yaml = "0.9"
glob = "0.3"
tree-sitter = "0.20"
tree-sitter-rust = "=0.20.0"
tree-sitter-python = "=0.20.3"
tree-sitter-javascript = "=0.20.0"
tree-sitter-typescript = "=0.20.3"
tree-sitter-go = "=0.20.0"
tree-sitter-java = "=0.20.2"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
syntect = "5.2"
pulldown-cmark = "0.9"
libc = "0.2"
git2 = "0.21.0"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
